{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 122,
  "lineage": "fcb29373-3b4d-3b25-c214-b2ab5f991958",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "abdulwahab-project-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic1",
            "internal_domain_name_suffix": "wsbc0nwckhretndxc2jxb4nalf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "jenkins-vm-ip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-public_ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/virtualNetworks/abdulwahab-project-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "abdulwahab-project-nic1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "abdulwahab-project"
          },
          "dependencies": [
            "azurerm_public_ip.jenkins-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "abdulwahab-project-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic2",
            "internal_domain_name_suffix": "wsbc0nwckhretndxc2jxb4nalf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "server-vm-ip",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/publicIPAddresses/server-vm-public_ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/virtualNetworks/abdulwahab-project-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "abdulwahab-project-nic2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "abdulwahab-project"
          },
          "dependencies": [
            "azurerm_public_ip.server-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkins-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic1|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic1",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.abdulwahab-project-nic1",
            "azurerm_network_security_group.jenkins-vm-nsg",
            "azurerm_public_ip.jenkins-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "server-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic2|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/server-vm-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkInterfaces/abdulwahab-project-nic2",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/server-vm-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.abdulwahab-project-nic2",
            "azurerm_network_security_group.server-vm-nsg",
            "azurerm_public_ip.server-vm-public_ip",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jenkins-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "location": "westeurope",
            "name": "jenkins-vm-nsg",
            "resource_group_name": "abdulwahab-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "all_out",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "server-vm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/networkSecurityGroups/server-vm-nsg",
            "location": "westeurope",
            "name": "server-vm-nsg",
            "resource_group_name": "abdulwahab-project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "all_out",
                "priority": 400,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh_sg",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins-vm-public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jenkins-vm-public_ip",
            "resource_group_name": "abdulwahab-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "server-vm-public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/publicIPAddresses/server-vm-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "server-vm-public_ip",
            "resource_group_name": "abdulwahab-project",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/virtualNetworks/abdulwahab-project-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "abdulwahab-project",
            "virtual_network_name": "abdulwahab-project-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "abdulwahab-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "362d82b4-51c2-49e2-b477-171370f9a05d",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/abdulwahab-project/providers/Microsoft.Network/virtualNetworks/abdulwahab-project-network",
            "location": "westeurope",
            "name": "abdulwahab-project-network",
            "resource_group_name": "abdulwahab-project"
          },
          "dependencies": [
            "azurerm_resource_group.abdulwahab-project"
          ]
        }
      ]
    }
  ]
}